removed evaluator column

--- a/Feedbacksystem/templates/pages/evaluations.html
+++ b/Feedbacksystem/templates/pages/evaluations.html
@@ -1,6 +1,6 @@
 {% extends "pages/admin.html" %}
 
-{% block title %}Courses{% endblock %}
+{% block title %}Evaluations{% endblock %}
 
 {% block header %}
 
@@ -13,14 +13,12 @@
 
 <table class="table table-hover table-striped table-bordered table-responsive  ">
     <tr>
-        <th scope="col" class="bg-success">EVALUATOR </th>
         <th  scope="col" class="bg-success">SUBJECT-FACULTY </th>
         <th  scope="col" class="bg-success">RATING </th>
         <th  scope="col" class="bg-success">COMMENTS </th>
     </tr>
     {% for i in evaluation %}
     <tr>
-        <td>{{ i.student }}</td>
         <td>{{ i.section_subject_faculty }}</td>
         <td>{{ i.rating }}</td>
         <td>{{ i.comments }}</td>
