created initial test model for sentiment analysis

--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -20,7 +20,7 @@
   <div class="container-fluid">
     <div class="row">
       <nav id="headerbar" class="col-md-12 col-lg-12 d-md-block sidebar headerbar"> 
-  <a class="navbar-brand" style="color: white;" href="{% url 'home' %}" id="headerlogo"><img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="64px" height="64px" id="cvsulogo">Feedback and Evaluation System <br> <div class=subtitle>Cavite State University Bacoor City Campus</div> </a> 
+  <a class="navbar-brand" style="color: white;" href="{% url 'admin' %}" id="headerlogo"><img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="64px" height="64px" id="cvsulogo">Feedback and Evaluation System <br> <div class=subtitle>Cavite State University Bacoor City Campus</div> </a> 
 </div>
 </div>
 </nav>
