--- a/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
+++ b/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
@@ -1,6 +1,6 @@
 {% extends "pages/home.html" %}
 
-{% block title %}Event Experience Hub Feature{% endblock %}
+{% block title %}Evaluate Teacher{% endblock %}
 
 {% block header %}
 
