--- a/Feedbacksystem/templates/pages/student_profile.html
+++ b/Feedbacksystem/templates/pages/student_profile.html
@@ -8,7 +8,7 @@
     <hr>
     {% endblock header %}
     {% block feature %}
-    <div class="container">
+    <div class="container" id="profilecontainer">
        
         <div id="profile" class = "container">
            
@@ -18,28 +18,29 @@
             <h4>Age: {{ student.age}} </h4>
             <h4>Sex: {{student.sex}} </h4>
             <h4>Course: {{student.Course}}</h4>
-            <h4>Section: {{student.Section}}</h4>
+            
+            
             
            </div>
-
-    </div>
-    <hr>
-
-    <h3>Section: {{student.Section}}</h3>
-    <table class="table table-hover table-striped table-bordered table-responsive  ">
+        <div class="tablecontainer" style="display: inline-block; margin-left: 20px; width: 500px;">
+            <h4>Section: {{student.Section}}</h4>
+           <table class="table table-hover table-striped table-bordered table-responsive  ">
+            <tr>
+            <th>Subject</th>
+            <th>Teacher</th>
+            <th>Options</th>
+        </tr>
         <tr>
-        <th>Subject</th>
-        <th>Teacher</th>
-        <th>Options</th>
-    </tr>
-    <tr>
-        {% for i in section_subjects_faculty %}
-            <td>{{ i.subjects.subject_code }}</td>
-            <td>{{ i.faculty.last_name }}</td>
-            <td> <a class="nav-link" href="{% url 'evaluate_subject_faculty' i.pk %}"> Evaluate</td>
- 
-    </tr>
+            {% for i in section_subjects_faculty %}
+                <td>{{ i.subjects.subject_code }}</td>
+                <td>{{ i.faculty.last_name }}</td>
+                <td> <a class="nav-link" href="{% url 'evaluate_subject_faculty' i.pk %}"> Evaluate</td>
+     
+        </tr>
+    </div>
+    </div>
 
+    
     {% endfor %}
     
     </table>
