--- a/Feedbacksystem/templates/pages/evaluations.html
+++ b/Feedbacksystem/templates/pages/evaluations.html
@@ -16,6 +16,7 @@
         <th  scope="col" class="bg-success">SUBJECT-FACULTY </th>
         <th  scope="col" class="bg-success">RATING </th>
         <th  scope="col" class="bg-success">COMMENTS </th>
+        <th  scope="col" class="bg-success">POLARITY </th>
         <th  scope="col" class="bg-success">OPTIONS </th>
     </tr>
     {% for i in evaluation %}
@@ -23,6 +24,7 @@
         <td>{{ i.section_subject_faculty }}</td>
         <td>{{ i.rating }}</td>
         <td>{{ i.comments }}</td>
+        <td>{{ i.predicted_sentiment }}</td>
         <td><a class="nav-link" href="{% url 'deleteEvaluation'  i.pk  %}"><b>DELETE</b></a></td>
 
     </tr>
