--- a/Feedbacksystem/templates/pages/students.html
+++ b/Feedbacksystem/templates/pages/students.html
@@ -19,7 +19,7 @@
         <th  scope="col" class="bg-success">NAME </th>
         <th  scope="col" class="bg-success">PROFILE PICTURE </th>
         <th  scope="col" class="bg-success">AGE </th>
-        <th  scope="col" class="bg-success">SEX </th>
+        <th  scope="col" class="bg-success">GENDER </th>
         <th  scope="col" class="bg-success">COURSE </th>
         <th  scope="col" class="bg-success">SECTION </th>
         <th  scope="col" class="bg-success">OPTION </th>
