--- a/Feedbacksystem/static/css/studentpage.css
+++ b/Feedbacksystem/static/css/studentpage.css
@@ -2,6 +2,7 @@
 #headerbar{
     padding: 10px;
     background-color: #2a9134;
+    
  
 }
 #headerlogo{
@@ -11,36 +12,69 @@
     text-transform: uppercase;
   margin-left: 50px;
 }
+
+a{
+  color: black;
+  text-decoration: none;
+
+}
+#profile_name:hover{
+  text-decoration: underline;
+}
+a:hover {
+
+  cursor: pointer;
+}
 #cvsulogo{
     margin-right: 20px;
 }
 .subtitle{
     font-size: 14px;
-    margin-left: 135px;
+    margin-left: 90px;
 
 }
-#cvsulogin{
-    margin-right: 100px;
-    letter-spacing: 1px;
-    background-color: #025400;
-
+main {
+  height: calc(80vh); /* Adjust to leave space for padding */
+  overflow-y: auto; /* Add a vertical scrollbar when content overflows */
 }
-.lightsidebar{
-    background-color:#fafafa;
-    box-sizing: border-box;
-    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
-    min-height: 100vh;
+#sidebar.lightsidebar {
+  background-color: #fafafa;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
+  max-height: 200%;
+  min-height: 80vh;
+  overflow-y: hidden; /* Hide scrollbar for sidebar */
 }
 .nav-item {/* Add padding to the items */
-    margin: 12px; /* Add margin to create space between items */
-    
- 
+    margin: 20px; /* Add margin to create space between items */ 
   }
-  .nav-link{
+.nav-link{
     color: #333;
 }
 .nav-link:hover {
-    background-color: gray;
+    background-color: #fafafa !important;
+    color: darkgreen !important;
+  }
+  .flex-column li a{
+    background-color: #fafafa;
+    &:focus, &:active {
+      color:darkgreen;
+      background-color:  #fafafa;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+
+  }
+}
+.nav-pills > li > a.active {
+  background-color: #fafafa !important;
+  color: darkgreen !important;
+}
+
+
+.nav-link.dropdown-toggle:active,
+.nav-link.dropdown-toggle:focus {
+  color: darkgreen !important;
 }
 #main-content {
     flex: 1;
@@ -54,7 +88,7 @@
     padding: 10px;
     box-sizing: border-box;
     box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.2);
-    height: 120px;
+    height: 140px;
   }
 
 #profile{
