--- a/Feedbacksystem/templates/pages/home.html
+++ b/Feedbacksystem/templates/pages/home.html
@@ -12,16 +12,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
   <link rel="stylesheet" href="{% static 'css/studentpage.css'%}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   
 
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row">
-      <nav id="headerbar" class="col-md-12 col-lg-12 d-md-block sidebar headerbar"> 
-  <a class="navbar-brand" style="color: white;" href="{% url 'home' %}" id="headerlogo"><img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="64px" height="64px" id="cvsulogo">Feedback and Evaluation System <br> <div class=subtitle>Cavite State University Bacoor City Campus</div></a>
+  <div class="container-fluid" style="padding: 0;">
+    <div style="display: flex; align-items: center; background-color: #2a9134; margin: 0; width: 100%; height: 20vh;">
+        <a class="navbar-brand" style="color: #fafafa;" href="{% url 'home' %}" id="headerlogo">
+            <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="64px" height="64px" id="cvsulogo"> Feedback and Evaluation System 
+            <div class="subtitle">Cavite State University Bacoor City Campus</div>
+        </a>
+        <div style="margin-left: 30rem;">
+            <img src="{{ student.profile_picture.url }}" alt="Student Profile" width="60" style="border-radius: 50%;">
+            <a href="{% url 'student_profile' %}" style="font-weight: 500;"> <p id="profile_name" style="color: #fafafa; display: inline-block;">{{ student.name }}</p> </a>
+        </div>
+    </div>
 </div>
 </div>
 </nav>
@@ -30,41 +38,41 @@
     <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar lightsidebar"> 
       <ul class="nav flex-column nav-pills">
         <li class="nav-item">
-        <a class="nav-link" href="{% url 'home' %}">
-              <b>DASHBOARD</b>
+          <a class="nav-link {% if request.path == '/home' %} active {% endif %}" href="/home">
+          <i class="bi bi-grid-1x2-fill"></i> <b>DASHBOARD</b>    
         
         
         </a>
       </li>
        
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'student_profile' %}">
-               <b>PROFILE</b>
-            </a>
+          <a class="nav-link {% if request.path == '/student_profile' %} active {% endif %}" href="{% url 'student_profile' %}">
+            <i class="bi bi-person-lines-fill"> </i> <b>PROFILE</b>
+              </a>
         </li>
         <li class="nav-item dropdown">
           <button class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              FEATURES
+            <i class="bi bi-chat-left-fill"></i> EVALUATE
           </button>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'facultyeval' %}">Faculty Evaluation</a>
-              <a class="dropdown-item" href="{% url 'eventhub' %}">Event Experience Hub</a>
+              <a class="dropdown-item" href="{% url 'facultyeval' %}">Faculty</a>
+              <a class="dropdown-item" href="{% url 'eventhub' %}">Events</a>
               <a class="dropdown-item" href="{% url 'suggestionbox' %}">Virtual Suggestion Box</a>
       </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'about' %}">
-                 <b>ABOUT</b>
-            </a>
+          <a class="nav-link {% if request.path == '/about' %} active {% endif %}" href="{% url 'about' %}">
+            <i class="bi bi-info-circle-fill"></i> <b>ABOUT</b>
+          </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'contactUs' %}">
-              <b>CONTACT US</b>
-            </a>
+          <a class="nav-link {% if request.path == '/contactUs' %} active {% endif %}" href="{% url 'contactUs' %}">
+            <i class="bi bi-telephone-fill"></i> <b>CONTACT US</b>
+          </a>
         </li>
         <!-- Add more navigation items here -->
         <li class="nav-item">
           <a class="nav-link" href="{% url 'studentlogout' %}">
-            <b>LOG OUT</b>
+            <i class="bi bi-box-arrow-in-left"></i> <b>LOG OUT</b>
           </a>
       </li>
     </ul>
@@ -74,11 +82,12 @@
     
     <div class="container" style="padding:10px; margin-top:10px;">
       {% block header %}
-    <h4>Welcome {{ student.name }}!</h4>
+    <h2> Student Dashboard</h2>
     <hr>
     <div id="eval" class = "container">
       <h3>Academic Year: 2024-2025</h3>
-      <h4>Evaluation Status: Ongoing </h4>
+      <h4>Semester: 1st</h4>
+      <h4>Student Evaluation for Teachers Status: Ongoing </h4>
      </div>
     {% endblock header %}
    
