--- a/Feedbacksystem/templates/pages/facultyeval.html
+++ b/Feedbacksystem/templates/pages/facultyeval.html
@@ -1,26 +1,54 @@
 {% extends "pages/home.html" %}
 
-{% block title %}Faculty Evaluation Feature{% endblock %}
+{% block title %}Evaluate Teacher{% endblock %}
 
 {% block header %}
 
-    <h2> Faculty Evaluation</h2>
-    <hr>
+    <h2>Faculty Evaluation</h2>
    
+    <hr>
 {% endblock header %}
-
 {% block feature %}
-<div class="container">
-    In this dedicated feature, we strive to provide a transparent and insightful evaluation process for our esteemed faculty members. Your feedback plays a crucial role in enhancing the teaching and learning experience at our institution.
-</div>
-<div class="container" style="margin-top: 10px;">
-   <h3>Purpose</h3>
-   Our faculty evaluation process is designed to ensure the continuous improvement of teaching quality, course content, and overall educational experience. By actively participating in this evaluation, you contribute to the ongoing refinement of our academic programs.
-   </div>
-   <div class="container" style="white-space: pre; margin-top: 10px;"><h3>How It Works</h3><b>Log In:</b> Access the evaluation portal through your student login.
-<b>Select Faculty:</b> Choose the Faculty/Teacher on your class for which you wish to provide feedback.
-<b>Rate and Comment: </b>Evaluate various aspects, such as teaching effectiveness, course materials, and communication, through a user-friendly rating 
-system and leave detailed comments.
-<b>Submit Your Evaluation: </b> Once you've completed the evaluation, submit your feedback securely.
-    </div>
+
+<select id="faculty-select" onchange="redirectToEvaluation(this)">
+    <option value="">Select Faculty</option> <!-- Placeholder option -->
+    {% for i in section_subjects_faculty %}
+    <option value="{% url 'evaluate_subject_faculty' i.pk %}">{{ i.faculty.first_name }} {{ i.faculty.last_name }}</option>
+    {% endfor %}
+
+</select>
+<script>
+    function redirectToEvaluation(selectElement) {
+        var selectedValue = selectElement.value;
+        if (selectedValue) {
+            window.location.href = selectedValue;
+        }
+    }
+</script>
+<form method="POST" action="">
+    
+    {% csrf_token %}
+    <table class="table table-striped table-bordered table-responsive  ">
+        <tr>
+            
+            <th  scope="col" class="bg-success">QUESTION </th>
+            <th  scope="col" class="bg-success">ANSWER </th>
+            
+           
+           
+        </tr>
+      
+        <tr>
+            <td>How would you rate the overall performance of the faculty?</td>
+            <td>{{ form.rating }}</td>
+        </tr>
+        
+    
+</table>
+    <label for="{{ form.comments.id_for_label }}">Provide additional comments or feedback:</label>
+  {{ form.comments }}
+  <br>
+    <input type="submit" value="Submit">
+</form>
+
 {% endblock feature %}
