--- a/Feedbacksystem/static/css/admin.css
+++ b/Feedbacksystem/static/css/admin.css
@@ -19,7 +19,8 @@ body{
 }
 .subtitle{
     font-size: 14px;
-    margin-left: 135px;
+    margin-left: 90px;
+
 
 }
 #cvsulogin{
@@ -28,30 +29,49 @@ body{
     background-color: #025400;
 
 }
-.lightsidebar{
-    background-color:#fafafa;
-    box-sizing: border-box;
-    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
-    min-height: 100vh;
+main {
+  height: calc(80vh); /* Adjust to leave space for padding */
+  overflow-y: auto; /* Add a vertical scrollbar when content overflows */
+}
+#sidebar.lightsidebar {
+  background-color: #fafafa;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
+  max-height: 200%;
+  min-height: 80vh;
+  overflow-y: hidden; /* Hide scrollbar for sidebar */
 }
 .nav-item {/* Add padding to the items */
-    margin: 12px; /* Add margin to create space between items */
-    
- 
-  }
-  .nav-link{
-    color: #333;
+  margin: 10px; /* Add margin to create space between items */ 
+}
+.nav-link{
+  color: #333;
 }
 .nav-link:hover {
-    background-color: gray;
+  background-color: #fafafa !important;
+  color: darkgreen !important;
 }
-#main-content {
-    flex: 1;
-    padding: 16px;
-  }
-  #navbarDropdown{
-    font-weight: bold;
-  }
+.flex-column li a{
+  background-color: #fafafa;
+  &:focus, &:active {
+    color:darkgreen;
+    background-color:  #fafafa;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+}
+}
+.nav-pills > li > a.active {
+background-color: #fafafa !important;
+color: darkgreen !important;
+}
+
+
+.nav-link.dropdown-toggle:active,
+.nav-link.dropdown-toggle:focus {
+color: darkgreen !important;
+}
 
   #eval{
     padding: 10px;
