--- a/Feedbacksystem/static/css/loginpage.css
+++ b/Feedbacksystem/static/css/loginpage.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif !important;
 }
 
 body{
@@ -14,6 +14,33 @@ body{
     flex-direction: column;
     height: 100vh;
     background-color:  #faf5fF;
+
+}
+body, h1, h5, a {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+}
+.dropdown-toggle {
+    background-color: #2a9134;
+    border: 0px;
+}
+.dropdown-toggle:hover {
+    background-color: #2a9134;
+    color: #000000;
+}
+.btn.btn-secondary.dropdown-toggle:active,
+.btn.btn-secondary.dropdown-toggle:focus {
+  background-color: #2a9134 !important;
+  color: #000000;
+}
+#admin{
+    font-weight: 500;
+    color: #000000;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    font-size: 17px;
+}
+.admininput{
+    font-size: 14px;
 }
 
 .container{
@@ -22,9 +49,10 @@ body{
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
     position: relative;
     overflow: hidden;
-    width: 768px;
+    width: 850px;
     max-width: 100%;
-    min-height: 480px;
+    min-height: 520px;
+    color: #000000;
 }
 
 .container p{
@@ -32,17 +60,22 @@ body{
     line-height: 20px;
     letter-spacing: 0.3px;
     margin: 20px 0;
+    font-weight: 600;
+    color: #000000;
+    margin-left: 2em;
 }
 
 .container span{
     font-size: 12px;
+    font-weight: 500;
 }
 
 .container a{
-    color: #333333;
+    color: #000000;
     font-size: 13px;
     text-decoration: none;
     margin: 15px 0 10px;
+    font-weight: 500;
 }
 
 .container button{
@@ -72,6 +105,7 @@ body{
     flex-direction: column;
     padding: 0 40px;
     height: 100%;
+    
 }
 
 .container input{
@@ -81,8 +115,9 @@ body{
     padding: 10px 15px;
     font-size: 13px;
     border-radius: 8px;
-    width: 100%;
+    width: 24em;
     outline: none;
+    font-weight: 500;
 }
 
 .form-container{
@@ -162,7 +197,6 @@ body{
 .toggle{
     background-color: #f7b205;
     height: 100%;
-    background: linear-gradient(to right, #f7b205, #fbea00);
     color: rgb(0, 0, 0);
     position: relative;
     left: -100%;
@@ -211,12 +245,8 @@ body{
 
 /*Calendar*/
 
-a:hover{    
-color:black;
-    
-}
 
-#admin{
+#adminsignin{
     font-size: 10px;
     color:#000000
 }
