--- a/Feedbacksystem/templates/pages/facultyevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyevaluations.html
@@ -1,6 +1,6 @@
 {% extends "pages/admin.html" %}
 
-{% block title %}Courses{% endblock %}
+{% block title %}Evaluations{% endblock %}
 
 {% block header %}
 
@@ -13,17 +13,19 @@
 {% if avg_rating %}
   <p><strong>Average Rating: {{ avg_rating|floatformat:1 }} </strong></p>
 {% endif %}
-<table class="table table-hover table-striped table-bordered table-responsive  ">
+<table class="table table-striped table-bordered table-responsive  ">
     <tr>
         <th  scope="col" class="bg-success">SUBJECT-FACULTY </th>
         <th  scope="col" class="bg-success">RATING </th>
         <th  scope="col" class="bg-success">COMMENTS </th>
+        <th  scope="col" class="bg-success">POLARITY </th>
     </tr>
     {% for i in teacher_evaluations %}
     <tr>
         <td>{{ i.section_subject_faculty }}</td>
         <td>{{ i.rating }}</td>
         <td>{{ i.comments }}</td>
+        <td>{{ i.predicted_sentiment }}</td>
 
     </tr>
 
