--- a/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
+++ b/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
@@ -27,27 +27,282 @@
 </script>
 <form method="POST" action="">
     {% csrf_token %}
-    <table class="table table-hover table-striped table-bordered table-responsive  ">
+    <table class="table table-bordered table-responsive  " style="margin-top: 1em;">
         <tr>
             
-            <th  scope="col" class="bg-success">QUESTION </th>
-            <th  scope="col" class="bg-success">RATING </th>
+            <th  scope="col" class="bg-success">I. SUBJECT MATTER CONTENT </th>
+            <th  scope="col" class="bg-success"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>
+          
             
            
            
         </tr>
       
         <tr>
-            <td>How would you rate the overall performance of the faculty?</td>
-            <td>{{ form.rating }}</td>
+            <td>Shows good command and knowledge of the subject 
+                matter</td>
+            <td>{{ form.command_and_knowledge_of_the_subject }}</td>
+        </tr>
+        <tr>
+            <td>Demonstrates breadth and depth of mastery</td>
+            <td>{{ form.depth_of_mastery }}</td>
+        </tr>
+        <tr>
+            <td>Draws and share information in the state-of-the-art
+                theory and practice in his/her respective discipline</td>
+            <td>{{ form.practice_in_respective_discipline }}</td>
+        </tr>
+        <tr>
+            <td>Demonstrates up-to-date knowledge and/or awareness 
+                on current trends and issues of the subject matter</td>
+            <td>{{ form.up_to_date_knowledge }}</td>
+        </tr>
+        <tr>
+            <td>Integrates subject to practical circumstances</td>
+            <td>{{ form.integrates_subject_to_practical_circumstances }}</td>
         </tr>
         
     
 </table>
-    <label for="{{ form.comments.id_for_label }}">Provide additional comments or feedback:</label>
-  {{ form.comments }} 
+
+<table class="table table-bordered table-responsive  " style="margin-top: 1em;">
+    <tr>
+        
+        <th  scope="col" class="bg-success">II. ORGANIZATION </th>
+        <th  scope="col" class="bg-success"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>
+      
+        
+       
+       
+    </tr>
+  
+    <tr>
+        <td>Organizes the subject matter</td>
+        <td>{{ form.organizes_the_subject_matter }}</td>
+    </tr>
+    <tr>
+        <td>Provides an orientation on course content and course
+            policies at the start of the semester</td>
+        <td>{{ form.provides_orientation_on_course_content }}</td>
+    </tr>
+    <tr>
+        <td>Shows substantial efforts of class preparation</td>
+        <td>{{ form.efforts_of_class_preparation }}</td>
+    </tr>
+    <tr>
+        <td>Emphasizes and summarizes main points </td>
+        <td>{{ form.summarizes_main_points }}</td>
+    </tr>
+    <tr>
+        <td>Monitors online class when possible </td>
+        <td>{{ form.monitors_online_class }}</td>
+    </tr>
+    
+
+</table>
+<table class="table table-bordered table-responsive  " style="margin-top: 1em;">
+    <tr>      
+        <th  scope="col" class="bg-success">III. TEACHER-STUDENT RAPPORT </th>
+        <th  scope="col" class="bg-success"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th> 
+    </tr>
+  
+    <tr>
+        <td>Holds interest of students </td>
+        <td>{{ form.holds_interest_of_students }}</td>
+    </tr>
+    <tr>
+        <td>Provides relevant feedback</td>
+        <td>{{ form.provides_relevant_feedback }}</td>
+    </tr>
+    <tr>
+        <td>Encourages participation and greater students’
+            interaction</td>
+        <td>{{ form.encourages_participation }}</td>
+    </tr>
+    <tr>
+        <td>Shows enthusiasm in every lesson and activity </td>
+        <td>{{ form.shows_enthusiasm }}</td>
+    </tr>
+    <tr>
+        <td>Shows sense of humor and openness to others point of
+            view</td>
+        <td>{{ form.shows_sense_of_humor }}</td>
+    </tr>
+<table class="table table-bordered table-responsive  " style="margin-top: 1em;">   
+    <tr>
+        <th  scope="col" class="bg-success">IV. TEACHING METHODS</th>
+        <th  scope="col" class="bg-success"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>
+      
+        
+       
+       
+    </tr>
+  
+    <tr>
+        <td>Uses various and relevant teaching methods,
+            instructional materials, and technology </td>
+        <td>{{ form.teaching_methods }}</td>
+    </tr>
+    <tr>
+        <td>Employs flexible learning strategies effectively</td>
+        <td>{{ form.flexible_learning_strategies }}</td>
+    </tr>
+    <tr>
+        <td>Includes varied, creative, and balanced student
+            engagement </td>
+        <td>{{ form.student_engagement }}</td>
+    </tr>
+    <tr>
+        <td>Uses examples that are simple, clear, precise, and
+            appropriate both in offline and online modes  </td>
+        <td>{{ form.clear_examples }}</td>
+    </tr>
+    <tr>
+        <td>Stays focused on and meets stated objectives</td>
+        <td>{{ form.focused_on_objectives }}</td>
+    </tr>
+    
+
+</table>
+<table class="table table-bordered table-responsive  " style="margin-top: 1em;">
+    <tr>
+        
+        <th  scope="col" class="bg-success">V. PRESENTATION</th>
+        <th  scope="col" class="bg-success"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>
+      
+        
+       
+       
+    </tr>
+  
+    <tr>
+        <td>Starts with a highly motivating activities </td>
+        <td>{{ form.starts_with_motivating_activities }}</td>
+    </tr>
+    <tr>
+        <td>Speaks in clear and audible manner </td>
+        <td>{{ form.speaks_in_clear_and_audible_manner }}</td>
+    </tr>
+    <tr>
+        <td>Uses appropriate medium of instruction</td>
+        <td>{{ form.uses_appropriate_medium_of_instruction }}</td>
+    </tr>
+    <tr>
+        <td> Establishes online classroom environment conducive
+            to learning when possible</td>
+        <td>{{ form.establishes_online_classroom_environment }}</td>
+    </tr>
+    <tr>
+        <td>Observes proper netiquette and/or classroom etiquette</td>
+        <td>{{ form.observes_proper_classroom_etiquette }}</td>
+    </tr>
+<table class="table table-bordered table-responsive  " style="margin-top: 1em;">   
+    <tr>
+        <th  scope="col" class="bg-success">VI. CLASSROOM MANAGEMENT</th>
+        <th  scope="col" class="bg-success"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>
+      
+        
+       
+       
+    </tr>
+  
+    <tr>
+        <td>Uses time wisely both in offline and online learning
+            modes and attends to interaction using varied learning
+            platforms</td>
+        <td>{{ form.uses_time_wisely }}</td>
+    </tr>
+    <tr>
+        <td> Gives ample time for the students to prepare for
+            scheduled synchronous sessions.</td>
+        <td>{{ form.gives_ample_time_for_students_to_prepare }}</td>
+    </tr>
+    <tr>
+        <td>Updates the students of their progress using objective
+            and consistent grading system </td>
+        <td>{{ form.updates_the_students_of_their_progress }}</td>
+    </tr>
+    <tr>
+        <td>Demonstrates leadership ability and professionalism</td>
+        <td>{{ form.demonstrates_leadership_and_professionalism }}</td>
+    </tr>
+    <tr>
+        <td>Understands possible distractions on content delivery
+            caused by connectivity and other situations beyond
+            control
+            </td>
+        <td>{{ form.understands_possible_distractions }}</td>
+    </tr>
+    
+<table class="table table-bordered table-responsive  " style="margin-top: 1em;">   
+    <tr>
+        <th  scope="col" class="bg-success">VII. SENSITIVITY and SUPPORT to STUDENTS</th>
+        <th  scope="col" class="bg-success"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>
+      
+        
+       
+       
+    </tr>
+  
+    <tr>
+        <td>Exhibits sensitivity to students' personal culture, gender
+            differences and disabilities</td>
+        <td>{{ form.sensitivity_to_student_culture }}</td>
+    </tr>
+    <tr>
+        <td>  Responds appropriately in a non-threatening, proactive learning environment </td>
+        <td>{{ form.responds_appropriately }}</td>
+    </tr>
+    <tr>
+        <td>Assists students on their concerns in the subject </td>
+        <td>{{ form.assists_students_on_concerns }}</td>
+    </tr>
+    <tr>
+        <td>Guides the students in accomplishing the learning
+            tasks both in offline and online learning modes </td>
+        <td>{{ form.guides_the_students_in_accomplishing_tasks }}</td>
+    </tr>
+    <tr>
+        <td>Extends consideration and adjusts to the situations of
+            the students accordingly 
+            </td>
+        <td>{{ form.extends_consideration_to_students }}</td>
+    </tr>
+    
+
+</table>
+
+
+
+<h3> Suggestions for Improvement</h3>
+
+<div class="container" style="margin-top: 2em;">
+    <h4>The course should: </h4>
+    {{ form.credit_task_preference }}
+    
+</div>
+
+
+   <!-- Strengths of the Faculty -->
+   <div class="container" style="margin-top: 2em;">
+    <label for="strengths_of_the_faculty">Strengths of the Faculty:</label>
+    {{ form.strengths_of_the_faculty }}
+</div>
+
+<!-- Other Suggestions for Improvement -->
+<div class="container" style="margin-top: 2em;">
+    <label for="other_suggestions_for_improvement">Other Suggestions for Improvement:</label>
+    {{ form.other_suggestions_for_improvement }}
+</div>
+
+<!-- Comments -->
+<div class="container" style="margin-top: 2em;">
+    <label for="comments">Overall Impression of the Faculty:</label>
+    {{ form.comments }}
+</div>
+
   <br>
-  <input type="submit"  class="btn btn-warning" value="Submit">
+  <input type="submit"  class="btn btn-success" value="Submit">
 </form>
 
 {% endblock feature %}
