--- a/Feedbacksystem/templates/pages/facultyevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyevaluations.html
@@ -15,18 +15,25 @@
 {% endif %}
 <table class="table table-striped table-bordered table-responsive  ">
     <tr>
-        <th  scope="col" class="bg-success">SUBJECT-FACULTY </th>
-        <th  scope="col" class="bg-success">RATING </th>
-        <th  scope="col" class="bg-success">COMMENTS </th>
+        <th  scope="col" class="bg-success">SUBJECT</th>
+        <th  scope="col" class="bg-success">FACULTY</th>
+        <th  scope="col" class="bg-success">AVERAGE RATING </th>
+        <th  scope="col" class="bg-success">OVERALL IMPRESSION </th>
         <th  scope="col" class="bg-success">POLARITY </th>
+        <th  scope="col" class="bg-success">ACADEMIC YEAR </th>
+        <th  scope="col" class="bg-success">SEMESTER </th>
+        <th  scope="col" class="bg-success">OPTIONS </th>
     </tr>
     {% for i in teacher_evaluations %}
     <tr>
-        <td>{{ i.section_subject_faculty }}</td>
-        <td>{{ i.rating }}</td>
+        <td>{{ i.section_subject_faculty.subjects }} </td>
+        <td>{{ i.section_subject_faculty.faculty }}</td>
+        <td>{{ i.average_rating }}</td>
         <td>{{ i.comments }}</td>
         <td>{{ i.predicted_sentiment }}</td>
-
+        <td>{{ i.academic_year }}</td>
+        <td>{{ i.semester }}</td>
+        <td><a class="nav-link" href="{% url 'view_evaluation_form' i.pk %}"><b>VIEW</b><a class="nav-link" href="{% url 'deleteEvaluation'  i.pk  %}"><b>DELETE</b></a></td>
     </tr>
 
     {% endfor %}
