minor improvements on ui/ux

--- a/Feedbacksystem/templates/pages/admin_evaluation_status.html
+++ b/Feedbacksystem/templates/pages/admin_evaluation_status.html
@@ -1,10 +1,10 @@
 {% extends "pages/admin.html" %}
 
-{% block title %}Add New Teacher{% endblock %}
+{% block title %}Modify Academic Year and Status{% endblock %}
 
 {% block header %}
 
-    <h2> Add Teacher</h2>
+    <h2>Change Year, Semester, and Status</h2>
     <hr>
    
 {% endblock header %}
@@ -15,6 +15,6 @@
     {{ form.as_p }}
 
 
-<input type = "submit" value="Add">
+<input type = "submit" value="Save Changes">
 </form>
 {% endblock feature %}
