--- a/Feedbacksystem/templates/pages/courses.html
+++ b/Feedbacksystem/templates/pages/courses.html
@@ -10,19 +10,17 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<a style = "color: black;" href="{% url 'addcourse' %}"><b>+ Add Course</b></a>
+<a style = "color: black; text-decoration: none;" href="{% url 'addcourse' %}"><b>+ Add Course</b></a>
 <br>
 <br>
 <table class="table table-hover table-striped table-bordered table-responsive  ">
     <tr>
-        <th scope="col" class="bg-success">ID </th>
         <th  scope="col" class="bg-success">COURSE </th>
      
         <th  scope="col" class="bg-success">OPTIONS </th>
     </tr>
     {% for i in course %}
     <tr>
-        <td>{{ i.id }}</td>
         <td>{{ i.name }}</td>
         <td>
         <a class="nav-link" href="{% url 'editcourse'  i.pk  %}"><b>EDIT</b></a>
