--- a/Feedbacksystem/templates/pages/home.html
+++ b/Feedbacksystem/templates/pages/home.html
@@ -85,9 +85,9 @@
     <h2> Student Dashboard</h2>
     <hr>
     <div id="eval" class = "container">
-      <h3>Academic Year: 2024-2025</h3>
-      <h4>Semester: 1st</h4>
-      <h4>Student Evaluation for Teachers Status: Ongoing </h4>
+      <h3>Academic Year: {{ evaluation_status.academic_year }}</h3>
+      <h4>Semester: {{ evaluation_status.semester }}</h4>
+      <h4>Student Evaluation for Teachers: {% if evaluation_status.evaluation_status %} Ongoing {% else %} Concluded {% endif %} </h4>
      </div>
     {% endblock header %}
    
