--- a/Feedbacksystem/templates/pages/section_details.html
+++ b/Feedbacksystem/templates/pages/section_details.html
@@ -15,9 +15,9 @@
 <br>
     <table class="table table-hover table-striped table-bordered table-responsive  ">
         <tr>
-        <th>Subject</th>
-        <th>Teacher</th>
-        <th>Options</th>
+        <th  scope="col" class="bg-success">Subject</th>
+        <th  scope="col" class="bg-success">Teacher</th>
+        <th  scope="col" class="bg-success">Options</th>
     </tr>
     <tr>
         {% for i in subjects_faculty %}
