--- a/Feedbacksystem/templates/pages/students.html
+++ b/Feedbacksystem/templates/pages/students.html
@@ -10,10 +10,10 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<a style = "color: black;" href="{% url 'addstudent' %}"><b>+ Add Student</b></a>
+<a style = "color: black; text-decoration: none;" href="{% url 'addstudent' %}"><b>+ Add Student</b></a>
 <br>
 <br>
-<table class="table table-hover table-striped table-bordered table-responsive  ">
+<table class="table table-bordered table-responsive  ">
     <tr>
         <th  scope="col" class="bg-success">STUDENT NUMBER </th>
         <th  scope="col" class="bg-success">NAME </th>
@@ -22,7 +22,7 @@
         <th  scope="col" class="bg-success">GENDER </th>
         <th  scope="col" class="bg-success">COURSE </th>
         <th  scope="col" class="bg-success">SECTION </th>
-        <th  scope="col" class="bg-success">OPTION </th>
+        <th  scope="col" class="bg-success">OPTIONS </th>
        
        
     </tr>
