--- a/Feedbacksystem/templates/pages/subjects.html
+++ b/Feedbacksystem/templates/pages/subjects.html
@@ -10,7 +10,7 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<a style = "color: black;" href="{% url 'addsubject' %}"><b>+ Add Subject</b></a>
+<a style = "color: black; text-decoration: none;" href="{% url 'addsubject' %}"><b>+ Add Subject</b></a>
 <br>
 <br>
 <table class="table table-hover table-striped table-bordered table-responsive  ">
