minor improvements to table display

--- a/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
+++ b/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
@@ -302,7 +302,7 @@
 </div>
 
   <br>
-  <input type="submit"  class="btn btn-success" value="Submit">
+  <input type="submit"  class="btn btn-danger" value="Submit">
 </form>
 
 {% endblock feature %}
