--- a/Feedbacksystem/templates/pages/courses.html
+++ b/Feedbacksystem/templates/pages/courses.html
@@ -22,7 +22,7 @@
     {% for i in course %}
     <tr>
         <td>{{ i.name }}</td>
-        <td>
+        <td style="display: flex; flex-direction: row; gap:1em"> 
         <a class="nav-link" href="{% url 'editcourse'  i.pk  %}"><b>EDIT</b></a>
           <a class="nav-link" href="{% url 'deleteCourse'  i.pk  %}"><b>DELETE</b></a>
         </td>
