--- a/Feedbacksystem/templates/pages/departments.html
+++ b/Feedbacksystem/templates/pages/departments.html
@@ -13,7 +13,7 @@
 <a style = "color: black; text-decoration: none;" href="{% url 'add_department' %}"><b>+ Add Department</b></a>
 <br>
 <br>
-<table class="table table-hover table-striped table-bordered table-responsive  ">
+<table class="table table-striped table-bordered table-responsive " >
     <tr>
         <th  scope="col" class="bg-success">DEPARTMENT </th>
      
@@ -22,7 +22,7 @@
     {% for i in department %}
     <tr>
         <td>{{ i.name }}</td>
-        <td>
+        <td style="display: flex; flex-direction: row; gap:1em"> 
         <a class="nav-link" href="{% url 'view_department' i.pk %}"><b>VIEW</b></a>
         <a class="nav-link" href="{}"><b>EDIT</b></a>
           <a class="nav-link" href="{}"><b>DELETE</b></a>
