--- a/Feedbacksystem/templates/pages/faculty.html
+++ b/Feedbacksystem/templates/pages/faculty.html
@@ -13,9 +13,8 @@
 <a style = "color: black; text-decoration: none;" href="{% url 'addteacher' %}"><b>+ Add Faculty</b></a>
 <br>
 <br>
-<table class="table table-hover table-striped table-bordered table-responsive  ">
+<table class="table table-striped table-bordered table-responsive  ">
     <tr>
-        <th scope="col" class="bg-success">ID </th>
         <th scope="col" class="bg-success">FIRST NAME </th>
         <th  scope="col" class="bg-success">LAST NAME </th>
         <th  scope="col" class="bg-success">GENDER </th>
@@ -26,14 +25,13 @@
     </tr>
     {% for i in faculty %}
     <tr>
-        <td>{{ i.id }}</td>
         <td>{{ i.first_name }}</td>
         <td>{{ i.last_name }}</td>
         <td>{{ i.gender }}</td>
         <td>{{ i.email }}</td>
         <td>{{ i.contact_number }}</td>
         <td>{{ i.department }}</td>
-        <td style="display: flex; flex-direction: column;"> <a class="nav-link" href="{% url 'facultyevaluations' i.pk %}"><b>VIEW</b></a><a class="nav-link" href="{% url 'editteacher'  i.pk  %}"><b>EDIT</b></a>
+        <td style="display: flex; flex-direction: row; gap:1em"> <a class="nav-link" href="{% url 'facultyevaluations' i.pk %}"><b>VIEW</b></a><a class="nav-link" href="{% url 'editteacher'  i.pk  %}"><b>EDIT</b></a>
           <a class="nav-link" href="{% url 'deleteTeacher'  i.pk  %}"><b>DELETE</b></a>
         </td>
     </tr>
