minor improvements to ui buttons and icons

--- a/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
+++ b/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
@@ -302,7 +302,7 @@
 </div>
 
   <br>
-  <input type="submit"  class="btn btn-danger" value="Submit">
+  <input type="submit"  class="btn btn-warning" value="Submit" style="font-weight: bold;">
 </form>
 
 {% endblock feature %}
