--- a/Feedbacksystem/templates/pages/faculty.html
+++ b/Feedbacksystem/templates/pages/faculty.html
@@ -10,7 +10,7 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<a style = "color: black; text-decoration: none;" href="{% url 'addteacher' %}"><b>+ Add Faculty</b></a>
+<a class="btn btn-warning" style = "color: black; text-decoration: none;" href="{% url 'addteacher' %}"><i class="bi bi-person-plus-fill"></i> <b>Add Faculty</b></a>
 <br>
 <br>
 <table class="table table-striped table-bordered table-responsive  ">
