--- a/Feedbacksystem/templates/pages/facultyeval.html
+++ b/Feedbacksystem/templates/pages/facultyeval.html
@@ -34,7 +34,7 @@
     }
 </script>
 {% else %}
-<p>Student Evaluations for Teachers Have Ended. Stay Tuned for Announcements Regarding the Next Evaluation Period. </p>
+<p>Student Evaluations for Teachers have ended. Stay tuned for announcements regarding the next evaluation Period. </p>
 {% endif %}
 <h3 style= "margin-top: 0.5em;"> <b>General Evaluation of the Faculty </b> </h3>
 <h4 style="margin-top: 0.5em;"> <b>Instructions: </b> </h4>
