--- a/Feedbacksystem/templates/pages/section_details.html
+++ b/Feedbacksystem/templates/pages/section_details.html
@@ -11,7 +11,7 @@
 <hr>
 {% block feature %}
 
-<a style = "color: black;" href="{% url 'addsub_section'  section.pk  %}"><b>+ Add Subject and Teacher</b></a>
+<a class="btn btn-warning" style = "color: black; text-decoration: none;" href="{% url 'addsub_section'  section.pk  %}"><i class="bi bi-plus-square-fill"></i> <b>Add Subject and Teacher</b></a>
 
 <br>
 <br>
