--- a/Feedbacksystem/templates/pages/view_department.html
+++ b/Feedbacksystem/templates/pages/view_department.html
@@ -10,7 +10,7 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<a style = "color: black;" href="{}"><b>+ Add Faculty</b></a>
+<a class="btn btn-warning" style = "color: black;" href="{}"> <i class="bi bi-person-plus-fill"></i> <b>Add Faculty</b></a>
 <br>
 <br>
     <table class="table table-striped table-responsive table-bordered">
