--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -11,8 +11,9 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-  <link rel="stylesheet" href="{% static 'css/adminpage.css'%}">
+  <link rel="stylesheet" href="{% static 'css/admin.css'%}">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
 </head>
 
@@ -40,8 +41,8 @@
     <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar lightsidebar"> 
       <ul class="nav flex-column nav-pills">
         <li class="nav-item">
-        <a class="nav-link" href="{% url 'admin' %}">
-              <b>DASHBOARD</b>
+          <a class="nav-link {% if request.path == '/admin' %} active {% endif %}" href="/admin">
+          <i class="bi bi-grid-1x2-fill"></i> <b>DASHBOARD</b>
         
         
         </a>
@@ -59,7 +60,7 @@
         </li>
       <li class="nav-item dropdown">
         <button class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="bi bi-chat-left-fill"></i> <b>FACULTY</b>
+          <i class="bi bi-duffle-fill"></i> <b>FACULTY</b>
         </button>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'faculty' %}">Faculty</a>
@@ -68,7 +69,7 @@
       </li>
       <li class="nav-item dropdown">
         <button class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="bi bi-chat-left-fill"></i> <b>STUDENTS</b>
+          <i class="bi bi-backpack-fill"></i> <b>STUDENTS</b>
         </button>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'students' %}">Students</a>
@@ -80,7 +81,7 @@
  
     <li class="nav-item">
       <a class="nav-link" href="{% url 'adminlogout' %}">
-       <b>LOGOUT</b>
+        <i class="bi bi-box-arrow-in-left"></i> <b>LOGOUT</b>
       </a>
     </li>
 
@@ -99,8 +100,8 @@
       <h3>Semester: {{ evaluation_status.semester }}</h3>
       <h4>Student Evaluation for Teachers Status: {% if evaluation_status.evaluation_status %} Ongoing {% else %} Concluded {% endif %}</h4>
 
-      <a style = "color: black; text-decoration: none;" href="{% url 'admin_evaluation_status' %}"><b>Edit</b></a>
-      <a style = "color: black; text-decoration: none; float: right;" href="{% url 'adminregister' %}"><b>+ Add New Admin</b></a>
+      <a class="btn btn-warning" style = "color: black; text-decoration: none;" href="{% url 'admin_evaluation_status' %}"><i class="bi bi-pencil-square"></i> <b>Edit</b></a>
+      <a class="btn btn-warning"  style = "color: black; text-decoration: none; margin-left: 0.5em;" href="{% url 'adminregister' %}"><i class="bi bi-person-plus-fill"></i> <b>Add New Admin</b></a>
 
     </div>
 
