--- a/Feedbacksystem/templates/pages/courses.html
+++ b/Feedbacksystem/templates/pages/courses.html
@@ -10,7 +10,7 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<a style = "color: black; text-decoration: none;" href="{% url 'addcourse' %}"><b>+ Add Course</b></a>
+<a class="btn btn-warning" style = "color: black; text-decoration: none;" href="{% url 'addcourse' %}"><i class="bi bi-plus-square-fill"></i> <b>Add Course</b></a>
 <br>
 <br>
 <table class="table table-hover table-striped table-bordered table-responsive  ">
