--- a/Feedbacksystem/templates/pages/departments.html
+++ b/Feedbacksystem/templates/pages/departments.html
@@ -10,7 +10,7 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<a style = "color: black; text-decoration: none;" href="{% url 'add_department' %}"><b>+ Add Department</b></a>
+<a class="btn btn-warning" style = "color: black; text-decoration: none;" href="{% url 'add_department' %}"><i class="bi bi-plus-square-fill"></i> <b>Add Department</b></a>
 <br>
 <br>
 <table class="table table-striped table-bordered table-responsive " >
