--- a/Feedbacksystem/templates/pages/evaluations.html
+++ b/Feedbacksystem/templates/pages/evaluations.html
@@ -10,12 +10,14 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<h4> Total Responses: {{ total_evaluations }}</h4>
 <form method="get" action="">
+    <h4> Total Responses: {{ total_evaluations }}</h4> 
     {{faculty_evaluation_filter.form}}
-    <button class="btn btn-warning" type="submit">Search</button>
+    <button class="btn btn-warning" type="submit" style="margin-left: 1em; font-weight: bold;">Search</button>
 </form>
-<table class="table table-striped table-bordered table-responsive  ">
+
+
+<table class="table table-striped table-bordered table-responsive  " style="margin-top: 1em;">
     <tr>
         <th  scope="col" class="bg-success">SUBJECT</th>
         <th  scope="col" class="bg-success">FACULTY</th>
