--- a/Feedbacksystem/templates/pages/home.html
+++ b/Feedbacksystem/templates/pages/home.html
@@ -11,7 +11,7 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-  <link rel="stylesheet" href="{% static 'css/studentpage.css'%}">
+  <link rel="stylesheet" href="{% static 'css/student.css'%}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   
@@ -26,8 +26,12 @@
             <div class="subtitle">Cavite State University Bacoor City Campus</div>
         </a>
         <div style="margin-left: 30rem;">
-            <img src="{{ student.profile_picture.url }}" alt="Student Profile" width="60" style="border-radius: 50%;">
-            <a href="{% url 'student_profile' %}" style="font-weight: 500;"> <p id="profile_name" style="color: #fafafa; display: inline-block;">{{ student.name }}</p> </a>
+          {% if student.profile_picture %}
+          <img src="{{ student.profile_picture.url }}" alt="Profile Picture" width="60" style=" border-radius: 50%;">
+          {% else %}
+          <img src="{% static 'images/Default_avatar.webp' %}" alt="Default Profile Picture" width="60" style="margin-right: 1em; border-radius: 50%;" >
+          {% endif %}
+            <a href="{% url 'student_profile' %}" style="font-weight: 500;"> <p id="profile_name" style="color: #fafafa; display: inline-block;">{{ student.first_name }} {{ student.last_name }}</p> </a>
         </div>
     </div>
 </div>
