--- a/Feedbacksystem/templates/pages/subjects.html
+++ b/Feedbacksystem/templates/pages/subjects.html
@@ -10,12 +10,11 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<a style = "color: black; text-decoration: none;" href="{% url 'addsubject' %}"><b>+ Add Subject</b></a>
+<a class="btn btn-warning" style = "color: black; text-decoration: none;" href="{% url 'addsubject' %}"><i class="bi bi-plus-square-fill"></i> <b>Add Subject</b></a>
 <br>
 <br>
 <table class="table table-hover table-striped table-bordered table-responsive  ">
     <tr>
-        <th scope="col" class="bg-success">ID </th>
         <th  scope="col" class="bg-success">SUBJECT CODE </th>
         <th  scope="col" class="bg-success">SUBJECT NAME </th>
         <th  scope="col" class="bg-success">OPTIONS </th>
@@ -24,7 +23,6 @@
     </tr>
     {% for i in subject %}
     <tr>
-        <td>{{ i.pk }}</td>
         <td>{{ i.subject_code }}</td>
         <td>{{ i.subject_name }}</td>   
         <td style="display: flex; flex-direction: row;"> 
