--- a/Feedbacksystem/templates/pages/event_creation_form.html
+++ b/Feedbacksystem/templates/pages/event_creation_form.html
@@ -8,10 +8,64 @@
     <hr>
     {% endblock header %}
     {% block feature %}
-    <form method="post" action="">
+
+<div class="container" style="width: 60%;">
+<div class="form-group">
+    <form method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Create Event</button>
+        <div class="form-group">
+        {{ form.title.label_tag }}
+        {{ form.title }}
+        </div>
+        <div class="form-group">
+        {{ form.date.label_tag }}
+        {{ form.date }}
+        </div>
+        <div class="form-group">
+        {{ form.time.label_tag }}
+        {{ form.time }}
+        </div>
+        <div class="form-group">
+        {{ form.location.label_tag }}
+        {{ form.location }}
+        </div>
+        <div class="form-group">
+        {{ form.event_type.label_tag }}
+        {{ form.event_type }}
+        </div>
+        <div class="form-group">
+        {{ form.event_picture.label_tag }}
+        {{ form.event_picture }}
+        </div>
+        <div class="form-group">
+        {{ form.description.label_tag }}
+        {{ form.description }}
+        </div>
+    
+        
+        <div class="form-group">
+            {{ form.course_attendees.label_tag }}
+            <div class="checkbox-list">
+                {% for course in form.course_attendees %}
+                    <div class="form-check">
+                        {{ course }}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form.department_attendees.label_tag }}
+            <div class="checkbox-list">
+                {% for department in form.department_attendees %}
+                    <div class="form-check">
+                        {{ department }}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        <button type="submit" class="btn btn-warning">Create Event</button>
     </form>
+     
+</div>
     {% endblock feature %}
 
