--- a/Feedbacksystem/templates/pages/eventhub.html
+++ b/Feedbacksystem/templates/pages/eventhub.html
@@ -9,5 +9,43 @@
     <hr>
 {% endblock header %}
 {% block feature %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+<table class="table table-striped table-bordered table-responsive  " style="margin-top: 1em;">
+    <tr>
+        <th  scope="col" class="bg-success">TITLE</th>
+        <th  scope="col" class="bg-success">DATE</th>
+        <th  scope="col" class="bg-success">TIME</th>
+        <th  scope="col" class="bg-success">LOCATION</th>
+        <th  scope="col" class="bg-success">EVENT TYPE </th>
+        <th  scope="col" class="bg-success">COURSE/DEPARTMENT ATTENDEES</th>
+        <th  scope="col" class="bg-success">DESCRIPTION</th>
+        <th  scope="col" class="bg-success">OPTIONS </th>
+    </tr>
+    {% for i in event %}
+    <tr>
+        <td>{{ i.title }}</td>
+        <td>{{ i.date }}</td>
+        <td>{{ i.time }}</td>
+        <td>{{ i.location }}</td>
+        <td>{{ i.event_type }}</td>
+        <td>
+            {% for course in i.course.all %}
+                {{ course.name }}{% if not forloop.last %}, {% endif %}
+            {% endfor %}
+            <br>
+            {% for department in i.department.all %}
+                {{ department.name }}{% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </td>
+        <td>{{ i.description }}</td>
+        <td><a class="nav-link" href="{% url 'event_detail' i.pk %}"><b>EVALUATE</b></td>
 
+    </tr>
+    {% endfor %}
 {% endblock feature %}
