--- a/Feedbacksystem/templates/pages/facultydashboard.html
+++ b/Feedbacksystem/templates/pages/facultydashboard.html
@@ -61,7 +61,7 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{% url 'facultyfeedbackandevaluations' %}">SET</a>
-              <a class="dropdown-item" href="{}">Events</a>
+              <a class="dropdown-item" href="{% url 'faculty_event_evaluations' %}">Events</a>
       </li>
       <li class="nav-item">
         <a class="nav-link {% if request.path == '/faculty_events' %} active {% endif %}" href="faculty_events">
