--- a/Feedbacksystem/templates/pages/facultyprofile.html
+++ b/Feedbacksystem/templates/pages/facultyprofile.html
@@ -17,7 +17,7 @@
             {% else %}
             <img src="{% static 'images/Default_avatar.webp' %}" alt="Default Profile Picture" width="150" style="margin-bottom: 2em;" >
             {% endif %}
-            <table class="table table-bordered table-responsive">
+            <table class="table table-responsive">
 
                 <tr>
                 <th>Name: </th>
